fix for bug #29657 xml_* functions throw non descriptive error, compared to php4 fix for bug #29711 libxml and non iso-8859-1. If no encoding specified, it defaults to UTF-8 now

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@166802 c90b9560-bf6c-de11-be94-00142212c4b1